# tree-sitter-idl

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  Package.swift  README.adoc  README.md  binding.gyp  biome.jsonc  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  setup.py  tree-sitter.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  depbot-auto-meger.yaml  depbot_auto_meger.yaml  publish.yml  pypi.yml  release-please-generate.yml  release-please.yaml  release.yml  unittest.yml
bindings/go/: binding.go  binding_test.go  go.mod
bindings/rust/: build.rs  lib.rs
common/: annotation.js  annotation.ts  base_types.js  base_types.ts  bitmask.js  bitmask.ts  common.js  common.ts  component_basic.js  component_homes.js  component_port.js  corba_interface.js  corba_value.js  directive.js  dsl.d.ts  event_dcl.js  expr.js  interface.js  literal.js  rpc.js  rpc.ts  template.js  template.ts  typedef_dcl.js  typedef_dcl.ts  union_dcl.js  value_type.js  value_type.ts
grammar/: annotation.js  annotation.ts  base_types.js  base_types.ts  bitmask.js  bitmask.ts  common.js  common.ts  directive.js  directive.ts  expr.js  expr.ts  index.ts  interface.js  literal.ts  rpc.ts  template.ts  union_dcl.ts  value_type.ts
idl_parser/: Cargo.toml
idl_parser/src/: lib.rs
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
src/tree_sitter/: parser.h
test/corpus/: annotation_builtin.txt  annotation_dcl.txt  annotation_ext.txt  bitmask_dcl.txt  bitset_dcl.txt  component_basic.txt  component_homes.txt  component_ports.txt  const_dcl.txt  enum_dcl.txt  (+13 more)
tree-sitter-idl/: grammar.js  index.ts  package.json  pyproject.toml
tree-sitter-idl_annotation/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  index.ts  package.json  pyproject.toml  setup.py  tsconfig.json
(+30 files in other folders)
