[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-idl"
description = "Idl grammar for tree-sitter"
version = "3.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "idl"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.8"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/cathaysia/tree-sitter-idl"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
