[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-idl"
description = "Idl grammar for tree-sitter"
version = "3.13.0"
keywords = ["incremental", "parsing", "tree-sitter", "idl"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.8"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/cathaysia/tree-sitter-idl"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
